fixing link layout bug adding div around social link for better responsive css

--- a/app/assets/stylesheets/pages/_talents.scss
+++ b/app/assets/stylesheets/pages/_talents.scss
@@ -350,7 +350,7 @@ section.talent {
           // transform: translate(-50%, -50%);
           // content: "";
           // border: 1px solid #000;
-          height: 360px;
+          height: 460px;
           width: 400px;
           // border-radius: 90%;
           // transform: rotate(0deg);
@@ -611,8 +611,8 @@ section.talent {
           // transform: translate(-50%, -50%);
           // content: "";
           // border: 1px solid #000;
-          height: 450px;
-          width: 300px;
+          height: 350px;
+          width: 350px;
           // border-radius: 90%;
           // transform: rotate(0deg);
           // pointer-events: none;
